--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,13 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.2",
-        "filament/filament": "3.3",
-        "filament/forms": "3.3",
-        "filament/widgets": "3.3",
-        "laravel/framework": "^12.0",
-        "laravel/jetstream": "^5.3",
+        "php": "^8.1",
+        "guzzlehttp/guzzle": "^7.2",
+        "laravel/framework": "^10.10",
+        "laravel/jetstream": "^5.0",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1",
-        "livewire/livewire": "^3.0",
-        "monzer/filament-chatify-integration": "^1.0"
+        "laravel/tinker": "^2.8",
+        "livewire/livewire": "^3.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -81,3 +78,4 @@
     "minimum-stability": "stable",
     "prefer-stable": true
 }
+
